# project_2026

apriltag_detector/: CMakeLists.txt  package.xml
apriltag_detector/config/: README.md  handeye_calib.yaml
apriltag_detector/launch/: tag_localizer.launch.py
apriltag_detector/src/: apriltagDetector.cpp  apriltag_node.cpp  tag_localizer_node copy.cpp
handeye_logger/: package.xml  package.xml.rej  setup.cfg  setup.py
handeye_logger/handeye_logger/: handeye_logger_node.py  handeye_logger_node.py.rej
handeye_logger_interfaces/: CMakeLists.txt  package.xml
handeye_logger_interfaces/action/: CaptureHandEye.action
handeye_solver/: CMakeLists.txt  package.xml
handeye_solver/include/handeye_solver/: dualQuart.hpp
handeye_solver/src/: dualQuart.cpp  handeye_solver.cpp
kinect/: CMakeLists.txt  package.xml
kinect/config/: tag_cad_points.yaml
kinect/include/kinect/: apriltagDetector.hpp  coordinateTransformer.hpp  kinectManager.hpp  rigidTransformSVD.hpp
kinect/src/: apriltagDetector.cpp  coordinateTransformer.cpp  kinectManager.cpp  kinect_node.cpp  rigidTransformSVD.cpp  tag4_corner0_3d_node.cpp
rtde_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rtde_controller/action/: MoveToPose.action
rtde_controller/rtde_controller/: RTDE_utils.py  move_client.py  rtde_node.py
rtde_controller_interfaces/: CMakeLists.txt  package.xml
rtde_controller_interfaces/action/: MoveToPose.action
scripts/: build.sh  menu.sh  start_all.sh  switch_config.sh
scripts/_lib/: env.sh
scripts/core/: start_apriltag.sh  start_kinect.sh  start_rtde_server.sh  start_tag_localizer.sh
scripts/handeye/: gen_calib_poses.sh  run_calib_poses.sh  run_calib_poses.sh.rej  run_solver.sh  run_tag4_cornor0.sh  start_logger.sh  verify_touch_accuracy.py
scripts/handeye/verify/: DIAGNOSIS.md  README_plotting.md  USAGE_INTEGRATED.md  analyze_calibration.py  plot_repeatability_errors.py  run_analysis.sh  run_repeatability_test.sh  test_integrated.sh  verify.sh  verify_tag4_simple.py  view_results.sh
scripts/tools/: start_rtde_client.sh
