<?xml version="1.0"?>
<package format="3">
  <name>apriltag_detector</name>
  <version>0.0.1</version>
  <description>AprilTag detector node and library (ROS 2 ament_cmake).</description>

  <maintainer email="victor@example.com">Victor</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>

  <!-- kinect is only needed for tag_localizer_node, not for the core library -->
  <build_depend>kinect</build_depend>
  <exec_depend>kinect</exec_depend>

  <!-- Non-ROS system dependencies -->
  <build_depend>opencv</build_depend>
  <exec_depend>opencv</exec_depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <!-- Optional: for running tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
