<?xml version="1.0"?>
<package format="3">
  <name>handeye_solver</name>
  <version>0.0.1</version>
  <description>Dual-quaternion hand-eye solver (AX=XB) from CSV</description>
  <maintainer email="victor@example.com">Victor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>Eigen3</build_depend>

  <exec_depend>eigen3_cmake_module</exec_depend>
  <exec_depend>Eigen3</exec_depend>
</package>
