<?xml version="1.0"?>
<package format="3">
  <name>rtde_controller_interfaces</name>
  <version>0.0.0</version>
  <description>Action interfaces for rtde_controller</description>
  <maintainer email="Victor@todo.todo">Victor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
  </export>
</package>
